# rapidata-mcp

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  rapidata_human_api copy.py  rapidata_human_api.py  rapidata_human_api_attempt.py
.github/workflows/: build-image.yml  ci.yml  deploy.yml
src/rapidata_mcp/: __init__.py  __main__.py  auth.py  server.py  token_verifier.py  tools.py
