[project]
name = "rapidata-mcp"
version = "0.1.0"
description = "Hosted MCP server for the Rapidata labeling platform"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
dependencies = [
    "mcp>=1.28.0",
    "rapidata>=3.15.0",
    "PyJWT[crypto]>=2.8.0",
    "httpx>=0.28.0",
    "starlette>=0.40.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
rapidata-mcp = "rapidata_mcp.server:main"

[dependency-groups]
dev = [
    "pyright>=1.1.390",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rapidata_mcp"]

[tool.pyright]
include = ["src/rapidata_mcp"]
pythonVersion = "3.10"
typeCheckingMode = "basic"
# The Rapidata SDK ships without type stubs; don't fail on its untyped surface.
reportMissingTypeStubs = false
reportUnknownMemberType = false

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
